--- a/public/css/app.css
+++ b/public/css/app.css
@@ -228,7 +228,17 @@ h5.cat {
     left: 50%;
     transform: translate(-5%, -50%);
 }
+.claro .dijitTooltipContainer {
+      background-image: none;
+      border:           1px solid #444444;
+      background-color: #444444;
+      color:            #FFFFFF;
+    }
 
+    .claro .dijitTooltipConnector {
+      background-image: none;
+    }
+    
 @media (min-width: 480px) {
     .map_open {
         display: none;
